<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey_background_color"
    android:paddingBottom="@dimen/fragment_margin_bottom"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/fragment_dialog_set_available_text"
        style="@style/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_dialog_set_available_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment_dialog_set_available_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_dialog_set_available_number"
        style="@style/fragment_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="@integer/max_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_set_available_text" />

    <Button
        android:id="@+id/fragment_dialog_cancel_button"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fragment_dialog_cancel_button_text"
        app:layout_constraintEnd_toStartOf="@+id/fragment_dialog_accept_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_set_available_number" />

    <Button
        android:id="@+id/fragment_dialog_accept_button"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fragment_dialog_accept_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_set_available_number" />

</androidx.constraintlayout.widget.ConstraintLayout>
