<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey_background_color"
    android:paddingHorizontal="@dimen/picker_horizontal_padding"
    tools:context=".activity.ReserverActivity">

    <TextView
        android:id="@+id/fragment_dialog_set_date_text"
        style="@style/app_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_margin_bottom"
        android:text="@string/time_picker_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time_picker_dialog_fragment"/>

    <TimePicker
        android:id="@+id/time_picker_dialog_fragment"
        android:timePickerMode="spinner"
        android:background="@color/honey_background_color"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_set_date_text"/>

    <Button
        style="@style/main_activity_button"
        android:id="@+id/fragment_dialog_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fragment_dialog_cancel_button_text"
        app:layout_constraintEnd_toStartOf="@id/fragment_dialog_accept_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_picker_dialog_fragment"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="@style/main_activity_button"
        android:id="@+id/fragment_dialog_accept_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fragment_dialog_accept_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/time_picker_dialog_fragment"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
