<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/parking_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_main_button_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_logo" />

    <TextView
        android:id="@+id/parking_main_title_text"
        style="@style/app_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_activity_default_text_view"
        android:text="@string/activity_main_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parking_logo" />

    <TextView
        android:id="@+id/parking_available_text"
        style="@style/main_activity_available_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/parking_main_title_text"
        app:layout_constraintStart_toStartOf="@id/parking_main_title_text"
        app:layout_constraintTop_toBottomOf="@id/parking_main_title_text" />

    <Button
        android:id="@+id/set_parking_button"
        style="@style/main_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_set_button_text"
        app:layout_constraintEnd_toEndOf="@id/parking_available_text"
        app:layout_constraintStart_toStartOf="@id/parking_available_text"
        app:layout_constraintTop_toBottomOf="@id/parking_available_text" />

    <Button
        android:id="@+id/reserve_parking_button"
        style="@style/main_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/activity_main_reservation_button_text"
        app:layout_constraintEnd_toEndOf="@id/set_parking_button"
        app:layout_constraintStart_toStartOf="@id/set_parking_button"
        app:layout_constraintTop_toBottomOf="@id/set_parking_button"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
